[Pranav]Added: Selection using Switch Cases anf Else-If Statements pages

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 
             <button><a href = "ifelse.html">Selection Programs</a></button>
 
+            <br>
+
+            <button><a href = "elseIf.html">Selection Programs Using ELSE-IF</a></button>
+
+            <br>
+
+            <button><a href = "SwitchCase.html">Selection Programs Using SWITCH-CASE</a></button>
+
            
         </div>
         <marquee>©Copyright 2023 reserved to Pranav A. Waghmare</marquee>
