--- a/index.html
+++ b/index.html
@@ -16,15 +16,23 @@
 
             <br>
 
-            <button><a href = "ifelse.html">Selection Programs</a></button>
+            <button class="btn2"><a href = "ifelse.html">Selection Programs</a></button>
 
             <br>
 
-            <button><a href = "elseIf.html">Selection Programs Using ELSE-IF</a></button>
+            <button class="btn3"><a href = "elseIf.html">Selection Programs Using ELSE-IF</a></button>
 
             <br>
 
-            <button><a href = "SwitchCase.html">Selection Programs Using SWITCH-CASE</a></button>
+            <button class="btn4"><a href = "SwitchCase.html">Selection Programs Using SWITCH-CASE</a></button>
+
+            <br>
+
+            <button class="btn5"><a href = "RepetationFor.html">Repetation Program Using FOR-LOOP</a></button>
+
+            <br>
+
+            <button class="btn6"><a href = "RepetationWhile.html">Repetation Programs Using WHILE-LOOP</a></button>
 
            
         </div>
